# pedestrainAvoidance

./: CMakeLists.txt  README.md  al.launch  package.xml
actor_plugin/: CMakeLists.txt  package.xml
actor_plugin/include/: ActorPlugin.hh  my_actor.h
actor_plugin/src/: my_actor.cpp
collision_avoidance/: CMakeLists.txt  package.xml
collision_avoidance/cmake/: FindCplex.cmake
collision_avoidance/config/: default.yaml
collision_avoidance/src/: CIAO.cpp  CIAO.h  Config.cpp  Config.h  Merge.cpp  Merge.h  PID.cpp  PID.h  ciaomain.cpp  collc.cpp  ipopttest.cpp  (+8 more)
images/: Untitled Diagram.drawio
my_controller/: CMakeLists.txt
mycar/: package.xml  urdf.rviz
people_sim/: CMakeLists.txt  package.xml
people_sim/launch/: spawn_people.launch  spawn_sdf.launch  start_test_world.launch
people_sim/models/movepeople/: actor1.sdf  actor2.sdf
people_sim/models/pillow/: model.sdf
people_sim/models/pillow/meshes/: jeff.dae
people_sim/models/standpeople/: model.config  model.sdf  model2.sdf  model3.sdf  model4.sdf  model5.sdf  model6.sdf
people_sim/models/standpeople/meshes/bobeye/: model3.sdf
people_sim/models/standpeople/meshes/bobeye/meshes/: bobeyev2.dae
people_sim/models/standpeople/meshes/jams/: model.config  model.sdf
people_sim/models/standpeople/meshes/kumaeye/: model.config  model.sdf
people_sim/models/standpeople/meshes/kumaeye/meshes/: kumaeye.dae
people_sim/models/standpeople/meshes/stand2/: stand2.dae
people_sim/script/: getPeoplePostion.py  get_model_gazebo_pose.py  leftright.py  move_ball_like_model.py  move_generic_model.py  move_person.py  move_personfast.py  updown.py
rgbd_detect/: .gitignore  CMakeLists.txt
rgbd_detect/darknet/: onlyperson.cfg  yolov3.cfg
rgbd_detect/script/: procRosBag.py
rgbd_detect/src/: Hungarian.cpp  Hungarian.h  KalmanFilter.cpp  LaserRecognizer.cpp  LaserRecognizer.h  SORT.cpp  SORT.h  YoloRecognizer.cpp  YoloRecognizer.h  main.cpp  main2.cpp
src/: Hungarian.cpp  Hungarian.h  KalmanFilter.cpp  KalmanFilter.h  LaserRecognizer.cpp  LaserRecognizer.h  SORT.cpp  SORT.h  Tracker.cpp  Tracker.h  YoloRecognizer.cpp  YoloRecognizer.h  main.cpp
vehicle_plugin/: CMakeLists.txt  package.xml
(+20 files in other folders)
