<?xml version="1.0"?>
<package format="2">
  <name>people_sim</name>
  <version>0.0.0</version>
  <description>The people_sim package</description>
  <maintainer email="duckfrost@theconstructsim.com">duckfrost</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>spawn_robot_tools_pkg</build_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>spawn_robot_tools_pkg</exec_depend>

  <export>
    <gazebo_ros gazebo_model_path="{prefix}/models"/>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
  </export>
</package>
